changed reg, fixed small bugs, added /profile
